--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "vite build; firbase deploy",
+    "deploy": "vite build; firebase deploy",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
@@ -21,7 +21,8 @@
     "tailwindcss": "^3.3.2",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-pwa": "^0.16.4"
   },
   "dependencies": {
     "@types/ramda": "^0.29.2",
